--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <base href="~/" />
     <link href="styles/reset.min.css" rel="stylesheet">
     <link href="styles/main.min.css" rel="stylesheet">
-    <link href="EP_Quest.styles.css" rel="stylesheet" />
+    <link href="EP_Quest.styles.css" rel="stylesheet" asp-append-version="true" />
     <script src="scripts/ScrollContent.js"></script>
 </head>
 <body>
