--- a/EP_Quest/wwwroot/styles/main.scss
+++ b/EP_Quest/wwwroot/styles/main.scss
@@ -20,7 +20,7 @@ main {
     background: linear-gradient(#1d709c, #000b39);
 }
 
-a {
+.floating-button {
     width: 12rem;
     height: 3rem;
     margin: 1rem 0;
@@ -66,7 +66,7 @@ a {
     }
 }
 
-.transparent{
+.transparent {
     opacity: 0;
 }
 
