--- a/EP_Quest/Components/Quest/Internal/Step.razor.css
+++ b/EP_Quest/Components/Quest/Internal/Step.razor.css
@@ -1,7 +1,21 @@
 ﻿.step-container {
   height: 100%;
+  width: 100%;
   overflow: auto;
   margin: 1rem 0.5rem 0 0;
+}
+.step-container .some-c {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 0.5rem 1rem 1rem;
+}
+.step-container #image-1 {
+  max-width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 1rem;
+  padding-left: 1.5rem;
 }
 .step-container .grid-wrapper {
   width: 100%;
