--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -10,7 +10,11 @@
     <link href="styles/reset.min.css" rel="stylesheet">
     <link href="styles/main.min.css" rel="stylesheet">
     <link href="EP_Quest.styles.css" rel="stylesheet" asp-append-version="true" />
-    <script src="scripts/ScrollContent.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="lib/turn.min.js" type="text/javascript"></script>
+    <script src="scripts/ScrollContent.js" type="text/javascript"></script>
+    <script src="scripts/Flipbook.js" type="text/javascript"></script>
 </head>
 <body>
     <main>
