--- a/EP_Quest/wwwroot/styles/main.scss
+++ b/EP_Quest/wwwroot/styles/main.scss
@@ -213,10 +213,11 @@ $cream: #fff9e6;
 /********* End particle Animation Styles ***********/
 
 .home-container {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 8rem;
 }
 
 .greeting-card-container {
