Choosed size of first image

--- a/EP_Quest/Components/Home/Index.razor
+++ b/EP_Quest/Components/Home/Index.razor
@@ -51,7 +51,7 @@
 
     private void Init()
     {
-        
+            StateHasChanged();
     }
 
     private async Task InputHandle(ChangeEventArgs ev)
