--- a/EP_Quest/Components/Home/Index.razor.scss
+++ b/EP_Quest/Components/Home/Index.razor.scss
@@ -20,26 +20,29 @@
     border-radius: 4px;
 }
 
-.page{
-
+.page {
 }
 
 #image-1 {
-    max-width: 100%;
+    aspect-ratio: 1.28;
+    width: 100%;
+    /*width: 1920px;
+    height: 1500px;*/
     box-sizing: border-box;
     padding: 1rem;
     padding-left: 1.5rem;
 }
 
 .book-container {
-    width: 95%;
+    width: 90%;
     height: 100%;
-    padding: 1rem 0;
+    padding: 1rem;
 }
 
 #flipbook {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
 #flipbook .page {
