--- a/EP_Quest/wwwroot/styles/main.scss
+++ b/EP_Quest/wwwroot/styles/main.scss
@@ -214,10 +214,9 @@ $cream: #fff9e6;
 
 .home-container {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
 .greeting-card-container {
