--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -19,7 +19,14 @@
   border-radius: 4px;
 }
 
-#image-1 {
+#image-2 {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 1rem;
+  padding-left: 1.5rem;
+}
+
+#image-3 {
   aspect-ratio: 1.28;
   width: 100%;
   /*width: 1920px;
@@ -30,15 +37,16 @@
 }
 
 .book-container {
-  width: 90%;
+  position: relative;
+  width: 86%;
   height: 100%;
   padding: 1rem;
+  box-sizing: border-box;
 }
 
 #flipbook {
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
 }
 
 #flipbook .page {
