--- a/EP_Quest/wwwroot/styles/main.scss
+++ b/EP_Quest/wwwroot/styles/main.scss
@@ -214,7 +214,7 @@ $cream: #fff9e6;
 
 .home-container {
     width: 100%;
-    height: auto;
+    height: 100vh;
     display: flex;
     justify-content: center;
 }
