--- a/EP_Quest/Components/Home/Index.razor
+++ b/EP_Quest/Components/Home/Index.razor
@@ -27,6 +27,7 @@
         </div>
         <div class="page"> Page 4 </div>
         <div class="page"> Page 5 </div>
+        <div class="page"> Page 6 </div>
         <div class="hard"></div>
         <div class="hard"></div>
     </div>
