--- a/EP_Quest/Components/Home/Index.razor
+++ b/EP_Quest/Components/Home/Index.razor
@@ -19,10 +19,18 @@
             <div class="image-container">
                 <img id="image-2" src="images/page-1.jpg" />
             </div>
+            <div class="text-container">
+                Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </div>
         </div>
         <div class="page">
             <div class="image-container">
                 <img id="image-3" src="images/page-1.jpg" />
+            </div>
+            <div class="text-container">
+                Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </div>
         </div>
         <div class="page"> Page 4 </div>
