--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -1,34 +1,39 @@
 ﻿.home-title {
-  margin-top: -2rem;
+  margin-top: 6rem;
   font-size: 2rem;
+  text-align: center;
 }
-
 @media (max-width: 767px) {
   .home-title {
     font-size: 2.5rem;
   }
 }
-.floating-button {
-  margin: auto;
-  margin-top: -8rem;
-}
 
 .key-input {
-  margin: -6rem auto 0 auto;
+  margin: 0 auto;
   text-align: center;
   border-radius: 4px;
 }
 
+.page {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .page .image-container {
-  height: auto !important;
-  box-sizing: border-box;
   border: 2px solid #000000;
   margin: 1rem;
+}
+.page .text-container {
+  width: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
+  height: auto;
 }
 
 #image-2 {
   width: 100%;
-  box-sizing: border-box;
   display: block;
 }
 
@@ -56,9 +61,6 @@
 
 #flipbook .page {
   background-color: white;
-  line-height: 300px;
-  font-size: 20px;
-  text-align: center;
 }
 
 #flipbook .page-wrapper {
