Intermediate mobile adaptive commit

--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="lib/turn.min.js" type="text/javascript"></script>
+    <script src="lib/zoom.min.js" type="text/javascript"></script>
+    <script src="lib/scissor.min.js" type="text/javascript"></script>
+    <script src="lib/hash.js" type="text/javascript"></script>
     <script src="scripts/ScrollContent.js" type="text/javascript"></script>
     <script src="scripts/Flipbook.js" type="text/javascript"></script>
 </head>
