--- a/EP_Quest/Components/Home/Index.razor
+++ b/EP_Quest/Components/Home/Index.razor
@@ -1,57 +1,75 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @using EP_Quest.Components.Shared
+@using EP_Quest.Models
+@using Microsoft.EntityFrameworkCore
 @inject LinkGenerator LGenerator
 @inject IHttpContextAccessor HttpContextAccessor
 @inject IConfiguration Configuration;
+@inject IQuestRepository Repository
 
 <Preloader IsLoading="IsLoading"></Preloader>
 
 <div class="book-container">
-    <div id="flipbook">
-        <div class="hard">
-            <h2 class="home-title">Your gift</h2>
-            @* <a class="floating-button @_buttonVisibilityStyle" href="@LGenerator.GetPathByAction("Index", "Quest")"><span>Quest</span></a> *@
-            <input disabled="@_isInputDisabled" placeholder="Enter key" class="key-input" type="text" @oninput="InputHandle" />
+    @if (_isInitialized)
+    {
+        <div id="flipbook">
+            <div class="hard">
+                <div class="title-container">
+                    <h2 class="home-title">Journey of</h2>
+                    <h2 style="@_nameTitleVisibilityStyle" class="name-title">Beautiful Demon</h2>
+                </div>
+                <input style="@_inputVisibilityStyle" placeholder="Enter key" class="key-input" type="text" @oninput="InputHandle" />
+            </div>
+            <div class="hard">
+                <h3 class="inner-congratulation">Be like a Rose</h3>
+            </div>
+
+            @foreach (var step in Steps)
+            {
+                var imageId = "image-" + step.Number;
+                var imagePath = "images/pages/page1/" + step.Number + ".jpg";
+
+                <div class="page">
+                    @if (!step.IsLocked)
+                    {
+                        <div class="image-container">
+                            <img id=@imageId src=@imagePath />
+                        </div>
+                        <div class="text-container">
+                            @step.Content
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="lock"></div>
+                    }
+                    <div class="page-number">
+                        @{
+                            var pageNumber = step.Number.ToString();
+                        }
+                        @pageNumber
+                    </div>
+                </div>
+            }
+            <div class="hard"></div>
+            <div class="hard"></div>
         </div>
-        <div class="hard"></div>
-        <div class="page">Page 1</div>
-        <div class="page">
-            <div class="image-container">
-                <img id="image-2" src="images/page-1.jpg" />
-            </div>
-            <div class="text-container">
-                Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-            </div>
-        </div>
-        <div class="page">
-            <div class="image-container">
-                <img id="image-3" src="images/page-1.jpg" />
-            </div>
-            <div class="text-container">
-                Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-            </div>
-        </div>
-        <div class="page"> Page 4 </div>
-        <div class="page"> Page 5 </div>
-        <div class="page"> Page 6 </div>
-        <div class="hard"></div>
-        <div class="hard"></div>
-    </div>
+    }
 </div>
 
 @code {
+    private bool _isInitialized = false;
     [Inject]
     IJSRuntime jsRuntime { get; set; }
+    private List<Step> Steps { get; set; }
     private bool IsLoading { get; set; } = true;
-    private string _buttonVisibilityStyle = "transparent";
-    private bool _isInputDisabled { get; set; }
+    private string _nameTitleVisibilityStyle = "display: none";
+    private string _inputVisibilityStyle = "display: inline";
     private string? _currentInputKeyValue = string.Empty;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        Init();
+        await Init();
         jsRuntime.InvokeVoidAsync("bookInit");
     }
 
@@ -61,13 +79,15 @@
         {
             await Task.Delay(1000);
             IsLoading = false;
-            StateHasChanged();
+            await InvokeAsync(StateHasChanged);
         }
     }
 
-    private void Init()
+    private async Task Init()
     {
-        StateHasChanged();
+        Steps = await Repository.Steps.OrderBy(x => x.Number).ToListAsync();
+        _isInitialized = true;
+        await InvokeAsync(StateHasChanged);
     }
 
     private async Task InputHandle(ChangeEventArgs ev)
@@ -78,7 +98,8 @@
         {
             await jsRuntime.InvokeVoidAsync("enableTurn");
             await jsRuntime.InvokeVoidAsync("nextPage");
-            _isInputDisabled = true;
+            _nameTitleVisibilityStyle = "display: inline";
+            _inputVisibilityStyle = "display: none";
         }
 
         // if (_currentInputKeyValue == Configuration["Phrases:Key phrase"])
@@ -86,4 +107,12 @@
         //     HttpContextAccessor?.HttpContext?.Response.Cookies.Append("KeyPhrase", "phrase");
         // }
     }
+
+    [JSInvokable]
+    public static void Refresh()
+    {
+        var a = 2;
+    }
+
+    
 }
