--- a/EP_Quest/Components/Home/Index.razor.css
+++ b/EP_Quest/Components/Home/Index.razor.css
@@ -1,25 +1,65 @@
-﻿.home-title {
+﻿.title-container {
   margin-top: 6rem;
   font-size: 2rem;
-  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-@media (max-width: 767px) {
-  .home-title {
-    font-size: 2.5rem;
+.title-container .home-title {
+  text-align: center;
+  width: 100%;
+}
+@media (max-width: 1240px) {
+  .title-container .home-title {
+    font-size: 2.4rem;
+  }
+}
+.title-container .name-title {
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 1240px) {
+  .title-container .name-title {
+    font-size: 2.4rem;
   }
 }
 
+.inner-congratulation {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  word-wrap: normal;
+  line-height: 40px;
+  writing-mode: vertical-rl;
+}
+
 .key-input {
+  width: 12rem;
   margin: 0 auto;
   text-align: center;
   border-radius: 4px;
+}
+
+.lock:before {
+  z-index: 2;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120px;
+  height: 120px;
+  background-image: url("images/lock.svg");
+  background-size: 120px 120px;
 }
 
 .page {
   color: black;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 .page .image-container {
   border: 2px solid #000000;
@@ -31,8 +71,24 @@
   box-sizing: border-box;
   height: auto;
 }
+@media (max-width: 980px) {
+  .page .text-container {
+    font-size: 1.2rem;
+  }
+}
+.page .page-number {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 4px;
+}
 
 #image-2 {
+  width: 100%;
+  display: block;
+}
+
+#image-1 {
   width: 100%;
   display: block;
 }
@@ -48,10 +104,39 @@
 
 .book-container {
   position: relative;
-  width: 86%;
-  height: 100%;
-  padding: 1rem;
+  width: 100%;
+  padding: 1rem 8rem;
   box-sizing: border-box;
+}
+@media (max-width: 1240px) {
+  .book-container {
+    padding: 2rem 2rem;
+  }
+}
+@media (max-width: 980px) {
+  .book-container {
+    padding: 2rem 8rem;
+  }
+}
+@media (max-width: 860px) {
+  .book-container {
+    padding: 2rem 4rem;
+  }
+}
+@media (max-width: 720px) {
+  .book-container {
+    padding: 1rem 2rem;
+  }
+}
+@media (max-width: 640px) {
+  .book-container {
+    padding: 0.5rem 1rem;
+  }
+}
+@media (max-width: 560px) {
+  .book-container {
+    padding: 0;
+  }
 }
 
 #flipbook {
@@ -76,13 +161,8 @@
   flex-direction: column;
   justify-content: flex-start;
   gap: 1rem;
-  background: #ccc !important;
-  color: #333;
-  -webkit-box-shadow: inset 0 0 5px #666;
-  -moz-box-shadow: inset 0 0 5px #666;
-  -o-box-shadow: inset 0 0 5px #666;
-  -ms-box-shadow: inset 0 0 5px #666;
-  box-shadow: inset 0 0 5px #666;
+  background: #191642 !important;
+  color: white;
   font-weight: bold;
 }
 
