--- a/EP_Quest/Components/Home/Index.razor.scss
+++ b/EP_Quest/Components/Home/Index.razor.scss
@@ -62,6 +62,7 @@
     color: black;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 
     .image-container {
         margin: 1rem 1.5rem;
@@ -71,26 +72,29 @@
         }
 
         @media (max-width: 620px) {
-            margin: 4rem .75rem .5rem 1rem;
+            margin: 2rem .75rem .5rem 1rem;
+        }
+
+        @media (max-width: 480px) {
+            margin: 3rem .5rem 1rem .5rem;
         }
     }
 
     .text-container {
-        width: 100%;
-        margin: .5rem 1rem 1rem 2rem;
-        box-sizing: border-box;
-        height: auto;
+        font-size: 1.3rem;
+        margin: .5rem 2rem .5rem 2rem;
 
         @media (max-width: 1180px) {
             font-size: 1.2rem;
         }
 
-        @media (max-width: 620px) {
-            margin-top: 1.5rem;
+        @media (max-width: 1024px) {
+            margin-left: 1.5rem;
         }
 
         @media (max-width: 480px) {
             font-size: 1rem;
+            margin-left: .5rem;
         }
     }
 
@@ -102,92 +106,96 @@
     }
 }
 
-#image-1 {
-    width: 100%;
-}
-
-.book-container {
-    position: relative;
-    width: 100%;
-    padding: 1rem 2rem;
-    box-sizing: border-box;
-
-    @media (max-width: 1240px) {
-        padding: 2rem 2rem;
+    #image-1 {
+        width: 100%;
     }
 
-    @media (max-width: 1024px) {
-        padding: 2rem .5rem;
-    }
-
-    @media (max-width: 979px) {
-        padding: 2rem 8rem;
-    }
-
-    @media (max-width: 860px) {
-        padding: 2rem 4rem;
-    }
-
-    @media (max-width: 760px) {
+    .book-container {
+        position: relative;
+        width: 100%;
         padding: 1rem 2rem;
+        box-sizing: border-box;
+
+        @media (max-width: 1240px) {
+            padding: 2rem 2rem;
+        }
+
+        @media (max-width: 1024px) {
+            padding: 2rem .5rem;
+        }
+
+        @media (max-width: 979px) {
+            padding: 2rem 8rem;
+        }
+
+        @media (max-width: 860px) {
+            padding: 2rem 4rem;
+        }
+
+        @media (max-width: 760px) {
+            padding: 1rem 2rem;
+        }
+
+        @media (max-width: 480px) {
+            padding: 5rem 1rem;
+        }
+
+        @media (max-width: 380px) {
+            padding: 0;
+        }
     }
 
-    @media (max-width: 680px) {
-        padding: 0;
+    #flipbook {
+        width: 100%;
+        height: 100%;
     }
-}
 
-#flipbook {
-    width: 100%;
-    height: 100%;
-}
+    #flipbook .page {
+        background-color: white;
+    }
 
-#flipbook .page {
-    background-color: white;
-}
+    #flipbook .page-wrapper {
+        -webkit-perspective: 2000px;
+        -moz-perspective: 2000px;
+        -ms-perspective: 2000px;
+        -o-perspective: 2000px;
+        perspective: 2000px;
+    }
 
-#flipbook .page-wrapper {
-    -webkit-perspective: 2000px;
-    -moz-perspective: 2000px;
-    -ms-perspective: 2000px;
-    -o-perspective: 2000px;
-    perspective: 2000px;
-}
+    #flipbook .hard {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 1rem;
+        background: #191642 !important;
+        color: white;
+        font-weight: bold;
+    }
 
-#flipbook .hard {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 1rem;
-    background: #191642 !important;
-    color: white;
-    font-weight: bold;
-}
+    #flipbook .odd {
+        background: -webkit-gradient(linear, right top, left top, color-stop(0.95, #FFF), color-stop(1, #DADADA));
+        background-image: -webkit-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+        background-image: -moz-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+        background-image: -ms-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+        background-image: -o-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+        background-image: linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+        -webkit-box-shadow: inset 0 0 8px #666;
+        -moz-box-shadow: inset 0 0 8px #666;
+        -o-box-shadow: inset 0 0 8px #666;
+        -ms-box-shadow: inset 0 0 8px #666;
+        box-shadow: inset 0 0 8px #666;
+    }
 
-#flipbook .odd {
-    background: -webkit-gradient(linear, right top, left top, color-stop(0.95, #FFF), color-stop(1, #DADADA));
-    background-image: -webkit-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
-    background-image: -moz-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
-    background-image: -ms-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
-    background-image: -o-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
-    background-image: linear-gradient(right, #FFF 95%, #C4C4C4 100%);
-    -webkit-box-shadow: inset 0 0 8px #666;
-    -moz-box-shadow: inset 0 0 8px #666;
-    -o-box-shadow: inset 0 0 8px #666;
-    -ms-box-shadow: inset 0 0 8px #666;
-    box-shadow: inset 0 0 8px #666;
-}
-
-#flipbook .even {
-    background: -webkit-gradient(linear, left top, right top, color-stop(0.98, #fff), color-stop(1, #dadada));
-    background-image: -webkit-linear-gradient(left, #fff 98%, #dadada 100%);
-    background-image: -moz-linear-gradient(left, #fff 98%, #dadada 100%);
-    background-image: -ms-linear-gradient(left, #fff 98%, #dadada 100%);
-    background-image: -o-linear-gradient(left, #fff 98%, #dadada 100%);
-    background-image: linear-gradient(left, #fff 98%, #dadada 100%);
-    -webkit-box-shadow: inset 0 0 5px #666;
-    -moz-box-shadow: inset 0 0 5px #666;
-    -o-box-shadow: inset 0 0 5px #666;
-    -ms-box-shadow: inset 0 0 5px #666;
-    box-shadow: inset 0 0 5px #666;
-}
+    #flipbook .even {
+        background: -webkit-gradient(linear, left top, right top, color-stop(0.98, #fff), color-stop(1, #dadada));
+        background-image: -webkit-linear-gradient(left, #fff 98%, #dadada 100%);
+        background-image: -moz-linear-gradient(left, #fff 98%, #dadada 100%);
+        background-image: -ms-linear-gradient(left, #fff 98%, #dadada 100%);
+        background-image: -o-linear-gradient(left, #fff 98%, #dadada 100%);
+        background-image: linear-gradient(left, #fff 98%, #dadada 100%);
+        -webkit-box-shadow: inset 0 0 5px #666;
+        -moz-box-shadow: inset 0 0 5px #666;
+        -o-box-shadow: inset 0 0 5px #666;
+        -ms-box-shadow: inset 0 0 5px #666;
+        box-shadow: inset 0 0 5px #666;
+    }
