Changed string of first page in the database

--- a/EP_Quest/Components/Home/Index.razor
+++ b/EP_Quest/Components/Home/Index.razor
@@ -42,7 +42,7 @@
                             <img id=@imageId src=@imagePath />
                         </div>
                         <div class="text-container">
-                            Не помню... 20-ого или 21-ого... хорошо бы не опоздать, вроде бы, тут для меня что-то есть :^)
+                            @step.Content
                         </div>
                     }
                     else
