--- a/EP_Quest/Views/Shared/_Layout.cshtml
+++ b/EP_Quest/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <script src="lib/hash.js" type="text/javascript"></script>
     <script src="scripts/ScrollContent.js" type="text/javascript"></script>
     <script src="scripts/Flipbook.js" type="text/javascript"></script>
+    <script src="scripts/Cookies.js" type="text/javascript"></script>
 </head>
 <body>
     <main>
